# notateIt_viewer

./: .gitignore  LICENSE  README.md  flake.nix  main.py  noteit_pngs.py  pyproject.toml
AppDir/: .DirIcon  AppRun  notateit.viewer.remake.desktop
AppDir/usr/share/applications/: notateit.viewer.remake.desktop
notateit_viewer/: __init__.py  __main__.py  parser.py  renderer.py  ui_components.py
