[project]
name = "notateit-viewer"
version = "1.0.0"
description = "Notateit Viewer Remake"
authors = [
    { name = "Nikita Denissov", email = "nikdissv@proton.me" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "pyside6 (>=6.9.3,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]
