[project]
name = "notateit-viewer"
version = "1.0.2"
description = "Notateit Viewer Remake"
authors = [
    { name = "Nikita Denissov", email = "n.denissov@proton.me" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pillow (>=12.1.1,<13.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)"
]

[project.scripts]
notateit-viewer = "notateit_viewer.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "nuitka (>=4.0,<5.0)",
    "zstandard (>=0.25.0,<0.26.0)"
]
